@@ -78,6 +78,7 @@ def object_mode(km):
 	space = km.space('Object Non-modal','EMPTY','WINDOW')
 	km.new(space,"view3d.drop_tool","RIGHTMOUSE","PRESS",[])
 	km.new(space,"bsmax.mode_set",'F9',"PRESS",[])
+	km.new(space,'wm.call_menu','A','PRESS',[('name','BSMAX_MT_createmenu')],ctrl=True,shift=True)
 
 def mesh(km):
 	space = km.space('Mesh','EMPTY','WINDOW')
